--- a/111_SDM_Transfer.Rmd
+++ b/111_SDM_Transfer.Rmd
@@ -56,9 +56,10 @@ The `spocc` package allows you to hit a number of the larger databases for prese
 
 ```{r}
 # get presence data
-# pres=spocc::occ('Alliaria petiolata',from='gbif',limit=5000) # this can be slow
+pres.tmp=spocc::occ('Alliaria petiolata',from='gbif',limit=5000) # this can be slow
+pres=pres.tmp$gbif$data[[1]][,c('longitude','latitude')]
   # so just read in the result of me running this earlier
-pres=read.csv('https://cmerow.github.io/YaleBGCCourses/101_assets/AP_gbif.csv')[,c('longitude','latitude')]
+#pres=read.csv('https://cmerow.github.io/YaleBGCCourses/101_assets/AP_gbif.csv')[,c('longitude','latitude')]
 pres=pres[complete.cases(pres),] # toss records without coords
 ```
 
